# monoRepo_test

./: BUILD  WORKSPACE
angular-real-world/src/: BUILD.bazel  bazel-execute-angular.sh  package-lock.json  package.json
angular-real-world/src/app1/: BUILD.bazel  index.html
angular-real-world/src/app1/app/: BUILD.bazel
angular-real-world/src/app1/app/hello-world/: BUILD.bazel  hello-world.component.ts
angular-real-world/src/app1/app/home/: BUILD.bazel
angular-real-world/src/app1/app/library1/: BUILD.bazel
angular-real-world/src/app1/app/library2/: BUILD.bazel
angular-real-world/src/app1/app/library3/: BUILD.bazel
angular-real-world/src/app1/app/library4/: BUILD.bazel
angular-real-world/src/app1/app/todos/: BUILD.bazel
angular-real-world/src/app1/lib/shorten/: BUILD.bazel
angular-real-world/src/app1/shared/material/: BUILD.bazel
angular-real-world/src/app10/: BUILD.bazel
angular-real-world/src/app10/app/: BUILD.bazel
angular-real-world/src/app10/app/hello-world/: BUILD.bazel
angular-real-world/src/app10/app/home/: BUILD.bazel
angular-real-world/src/app10/app/library1/: BUILD.bazel
angular-real-world/src/app10/app/library2/: BUILD.bazel  library2.component.ts
angular-real-world/src/app10/app/library3/: BUILD.bazel  library3.component.ts
angular-real-world/src/app10/app/library4/: BUILD.bazel
angular-real-world/src/app10/app/todos/: BUILD.bazel
angular-real-world/src/app10/lib/shorten/: BUILD.bazel
angular-real-world/src/app10/shared/material/: BUILD.bazel
angular-real-world/src/app2/: BUILD.bazel
angular-real-world/src/app2/app/: BUILD.bazel
angular-real-world/src/app2/app/hello-world/: BUILD.bazel
angular-real-world/src/app2/app/home/: BUILD.bazel
angular-real-world/src/app2/app/library1/: BUILD.bazel  library.component.ts
angular-real-world/src/app2/app/library2/: BUILD.bazel
angular-real-world/src/app2/app/library3/: BUILD.bazel
angular-real-world/src/app2/app/library4/: BUILD.bazel
angular-real-world/src/app2/app/todos/: BUILD.bazel
angular-real-world/src/app2/lib/shorten/: BUILD.bazel
angular-real-world/src/app2/shared/material/: BUILD.bazel
angular-real-world/src/app3/: BUILD.bazel
angular-real-world/src/app3/app/: BUILD.bazel
angular-real-world/src/app3/app/hello-world/: BUILD.bazel  hello-world.component.html
angular-real-world/src/app3/app/home/: BUILD.bazel
angular-real-world/src/app3/app/library1/: BUILD.bazel
angular-real-world/src/app3/app/library2/: BUILD.bazel  library2.component.html
angular-real-world/src/app3/app/library3/: BUILD.bazel
angular-real-world/src/app3/app/library4/: BUILD.bazel
angular-real-world/src/app3/app/todos/: BUILD.bazel
angular-real-world/src/app3/lib/shorten/: BUILD.bazel
angular-real-world/src/app3/shared/material/: BUILD.bazel
angular-real-world/src/app4/: BUILD.bazel
angular-real-world/src/app4/app/: BUILD.bazel
angular-real-world/src/app4/app/hello-world/: BUILD.bazel
angular-real-world/src/app4/app/home/: BUILD.bazel
angular-real-world/src/app4/app/library1/: BUILD.bazel
angular-real-world/src/app4/app/library2/: BUILD.bazel
angular-real-world/src/app4/app/library3/: BUILD.bazel
angular-real-world/src/app4/app/library4/: BUILD.bazel  library4.component.ts
angular-real-world/src/app4/app/todos/: BUILD.bazel
angular-real-world/src/app4/lib/shorten/: BUILD.bazel
angular-real-world/src/app4/shared/material/: BUILD.bazel
angular-real-world/src/app5/: BUILD.bazel
angular-real-world/src/app5/app/: BUILD.bazel
angular-real-world/src/app5/app/hello-world/: BUILD.bazel
angular-real-world/src/app5/app/home/: BUILD.bazel
angular-real-world/src/app5/app/library1/: BUILD.bazel
angular-real-world/src/app5/app/library2/: BUILD.bazel
angular-real-world/src/app5/app/library3/: BUILD.bazel
angular-real-world/src/app5/app/library4/: BUILD.bazel
angular-real-world/src/app5/app/todos/: BUILD.bazel
angular-real-world/src/app5/lib/shorten/: BUILD.bazel
angular-real-world/src/app5/shared/material/: BUILD.bazel
angular-real-world/src/app6/: BUILD.bazel
angular-real-world/src/app6/app/: BUILD.bazel
angular-real-world/src/app6/app/hello-world/: BUILD.bazel
angular-real-world/src/app6/app/home/: BUILD.bazel
angular-real-world/src/app6/app/library1/: BUILD.bazel  library.module.ts
angular-real-world/src/app6/app/library2/: BUILD.bazel
angular-real-world/src/app6/app/library3/: BUILD.bazel
angular-real-world/src/app6/app/library4/: BUILD.bazel
angular-real-world/src/app6/app/todos/: BUILD.bazel
angular-real-world/src/app6/lib/shorten/: BUILD.bazel
angular-real-world/src/app6/shared/material/: BUILD.bazel
angular-real-world/src/app7/: BUILD.bazel
angular-real-world/src/app7/app/: BUILD.bazel
angular-real-world/src/app7/app/hello-world/: BUILD.bazel
angular-real-world/src/app7/app/home/: BUILD.bazel
angular-real-world/src/app7/app/library1/: BUILD.bazel
angular-real-world/src/app7/app/library2/: BUILD.bazel
angular-real-world/src/app7/app/library3/: BUILD.bazel
angular-real-world/src/app7/app/library4/: BUILD.bazel
angular-real-world/src/app7/app/todos/: BUILD.bazel
angular-real-world/src/app7/lib/shorten/: BUILD.bazel
angular-real-world/src/app8/: BUILD.bazel
angular-real-world/src/app8/app/: BUILD.bazel
angular-real-world/src/app9/: BUILD.bazel
angular-real-world/src/app9/app/: BUILD.bazel
angular-real-world/src/atom1/: BUILD.bazel
angular-real-world/src/atom2/: BUILD.bazel
angular-real-world/src/atom3/: BUILD.bazel  atom3.component.html  atom3.module.ts
angular-real-world/src/atom4/: BUILD.bazel
angular-real-world/src/molecule1/: BUILD.bazel  molecule1.component.ts  molecule1.module.ts
angular-real-world/src/molecule2/: BUILD.bazel
angular-real-world/src/molecule3/: BUILD.bazel
angular-real-world/src/molecule4/: BUILD.bazel
angular-real-world/src/organisme1/: BUILD.bazel
angular-real-world/src/organisme2/: BUILD.bazel
angular-real-world/src/organisme3/: BUILD.bazel
angular-real-world/src/organisme4/: BUILD.bazel  organisme4.component.ts  organisme4.module.ts
(+138 files in other folders)
