load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//:__subpackages__"])

# ts_library and ng_module use the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
alias(
    name = "tsconfig.json",
    actual = "//src/app10:tsconfig.json",
)

k8s_deploy(
    name = "deploy",
    images = {
        "gcr.io/internal-200822/app1:nodejs_image": "//app1:image",
    },
    template = ":deployment.yaml",
)

# For testing from the root workspace of this repository with bazel_integration_test.
filegroup(
    name = "all_files",
    srcs = glob(
        include = ["**/*"],
        exclude = [
            "bazel-out/**/*",
            "dist/**/*",
            "node_modules/**/*",
        ],
    ) + [
        "//e2e:all_files",
        "//src/app10:all_files",
        "//tools:all_files",
    ],
    visibility = ["//visibility:public"],
)
