load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

ts_library(
    name = "reducers",
    srcs = glob(["*.ts"]),
    tsconfig = "//src/app10:tsconfig.json",
    deps = [
        "@npm//@ngrx/store",
    ],
)

# For testing from the root workspace of this repository with bazel_integration_test.
filegroup(
    name = "all_files",
    srcs = glob(["**/*"]),
)
